Rework how classes from fits.jar (and just class files for unit tests) are added to custom classpath in ToolBelt.java